<resources>
    <string name="app_name">Laivanupotus</string>

    <string name="button_new">Wait for opponent</string>
    <string name="button_join">Search for opponent</string>
    <string name="button_startgame">Start game</string>

    <string name="battleship">Battleship</string>
    <string name="cruiser">Cruiser</string>
    <string name="destroyer">Destroyer</string>
    <string name="shiplayout">Ship Layout:</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
</resources>
