<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShipSettingActivity">

    <LinearLayout
        android:id="@+id/linearLayoutPlacement"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioShips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioBattle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/battleship" />

            <RadioButton
                android:id="@+id/radioCruiser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cruiser" />

            <RadioButton
                android:id="@+id/radioDestroyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destroyer" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shiplayout" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/horizontal" />

    </LinearLayout>

    <!--
        Alla olevat nappulat ovat suunnittelun apuna, määrä ja funktio saattavat muuttua
    -->

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="235dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPlacement">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>